--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,10 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Random selection
 rand = "0.8"
+
+[profile.release]
+strip = true        # Remove debug symbols
+opt-level = "z"     # Optimize for size
+lto = true          # Link Time Optimization
+codegen-units = 1   # Better optimization (slower compile)
+panic = "abort"     # Reduce runtime size
