--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,30 @@
 [package]
 name = "rust-flashcards"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 # Web Framework
 axum = "0.7"
 tokio = { version = "1", features = ["full"] }
-tower = "0.4"
-tower-http = { version = "0.5", features = ["fs", "trace"] }
+tower = "0.5"
+tower-http = { version = "0.6", features = ["fs", "trace"] }
 
 # Database
-rusqlite = { version = "0.31", features = ["bundled"] }
+rusqlite = { version = "0.32", features = ["bundled"] }
 r2d2 = "0.8"
-r2d2_sqlite = "0.24"
+r2d2_sqlite = "0.25"
 
 # Session Management
-tower-sessions = "0.12"
+tower-sessions = "0.13"
 
 # Templates
 askama = { version = "0.12", features = ["with-axum"] }
 askama_axum = "0.4"
 
 # Markdown Processing
-pulldown-cmark = "0.11"
-syntect = "5.2"
+pulldown-cmark = "0.12"
+syntect = "5.3"
 
 # Content Scanning
 walkdir = "2"
@@ -35,7 +35,6 @@ dotenvy = "0.15"
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 
 # Error Handling
 anyhow = "1"
@@ -48,7 +47,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Random selection
 rand = "0.8"
 
-
+# See .cargo/config.toml
 [profile.release]
 strip = true      # Remove debug symbols
 opt-level = "z"   # Optimize for size
