Added CLI argument passing --r to rebuild the database for example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ regex = "1"
 # Configuration
 dotenvy = "0.15"
 
+# CLI Arguments
+clap = { version = "4.5", features = ["derive"] }
+
 # Serialization
 serde = { version = "1", features = ["derive"] }
 
