--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,6 @@ serde = { version = "1", features = ["derive"] }
 
 # Error Handling
 anyhow = "1"
-thiserror = "2"
 
 # Logging
 tracing = "0.1"
@@ -50,7 +49,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Random selection
 rand = "0.9"
 
-# See .cargo/config.toml
+# See also .cargo/config.toml
 [profile.release]
 strip = true      # Remove debug symbols
 opt-level = "z"   # Optimize for size
